# r1x

./: README.md
audio/: AudioManager.cpp  AudioManager.h  AudioSample.cpp  AudioSample.h  CMakeLists.txt  WavBuffer.cpp  WavBuffer.h  audio.pri
base/: AngleInterpolator.cpp  AngleInterpolator.h  Assets.cpp  Assets.h  AtlasImporter.h  BaseView.cpp  BaseView.h  Biped.cpp  Biped.h  BipedWalk.cpp  BipedWalk.h  BlinkFloat.cpp  BlinkFloat.h  Camera.cpp  Camera.h  CellMap.cpp  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EventArgs.cpp  EventArgs.h  Explosion.cpp  Explosion.h  FakeShadows.h  Fakeshadows.cpp  FrameRate.cpp  Hermite.h  InstanceRender.cpp  InstanceRenderer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  OBJLoader.cpp  OBJLoader.h  (+37 more)
base/shaders/: shaders.qrc
components/: BasicModel.cpp  BasicModel.h  CMakeLists.txt  DragDrop.cpp  DragDrop.h  Entity.cpp  Entity.h  EntityCollection.cpp  EntityCollection.h  TmxJsonParser.cpp  TmxJsonParser.h  TmxRenderer.cpp  TmxRenderer.h  components.pri
core/: CMakeLists.txt  Core.h  DelegateDispatcher.cpp  DelegateDispatcher.h  Delegates.cpp  Delegates.h  EventArgs.h  EventDispatcher.cpp  EventDispatcher.h  Events.cpp  Events.h  Randomizer.cpp  Randomizer.h  SmartPtr.h  Temporal.cpp  Temporal.h  Timer.cpp  Timer.h  core.pri
event-system/: Core.cpp  Core.h  DelegateDispatcher.h  Delegates.h  EventArgs.cpp  EventDispatcher.cpp  EventDispatcher.h  Events.h  Globals.cpp  Globals.h  event-system.pri
examples/: CMakeLists.txt  DragToTarget.cpp  DragToTarget.h  ExampleBase.h  InputTracker.cpp  InputTracker.h  PlaySoundFx.cpp  PlaySoundFx.h  SpriteParticleFade.cpp  SpriteParticleFade.h  SpritesFromAtlas.cpp  SpritesFromAtlas.h  TiledMap.cpp  TiledMap.h  UIFactory.cpp  UIFactory.h  UserInterface.cpp  UserInterface.h  Viewd3dModels.cpp  Viewd3dModels.h  examples.pro  main.cpp  mainwidget.cpp  mainwidget.h
examples/android/: AndroidManifest.xml  gradle.properties  gradle.properties~  local.properties~
examples/assets/: Sounds.qrc  fonts.qrc  models.qrc  textures.qrc  tiledmaps.qrc
examples/assets/fonts/: pipe.json  pipe48.json
examples/assets/models/: groundPatch.blend  groundPatch.mtl  head.blend  head.mtl
examples/assets/textures/: atlas1.atlas  textures.atlas
examples/assets/tiledMaps/: desert.json  desertLand.json  desertLand.tmx  testLevel.json
examples/icons/: Untitled.xcf
graphics/: AngleInterpolator.h  AtlasImporter.cpp  AtlasImporter.h  BlinkFloat.cpp  BlinkFloat.h  CMakeLists.txt  Camera.cpp  Camera.h  CellMap.h  DPIHelper.cpp  DPIHelper.h  FrameRate.h  Graphics.cpp  Graphics.h  Hermite.cpp  Hermite.h  IClipper.h  InstanceRender.cpp  Interpolator.cpp  Interpolator.h  Material.cpp  Material.h  Mesh.cpp  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  OBJLoader.h  Ogl.h  PhongShader.cpp  PhongShader.h  QuadRenderer2D.cpp  QuadRenderer2DX.cpp  QuadRenderer2DX.h  QuadRenderer3D.cpp  QuadRenderer3D.h  QuadRendererBase.cpp  QuadRendererBase.h  QuadRenderers.cpp  QuadRenderers.h  (+33 more)
graphics/shaders/: phongFragmentShader.glsl  phongVertexShader.glsl  rasterFragmentShader.glsl  rasterVertexShader.glsl  shaders.qrc
shaders/: DistanceFields.shader.cpp  phongFragmentShader.glsl  phongVertexShader.glsl
shaders/oldShaders/: fshader2.glsl  vshader2.glsl
user-interface/: Button.cpp  Button.h  ButtonManager.cpp  ButtonManager.h  CMakeLists.txt  DPIHelper.cpp  DPIHelper.h  FocusGuard.h  Font.cpp  Font.h  FontData.cpp  FontData.h  FontManager.cpp  FontManager.h  Icon.cpp  Icon.h  InputArea.cpp  InputArea.h  InputAreaManager.cpp  InputAreaManager.h  Slider.cpp  Slider.h  TextLabel.cpp  TextLabel.h  TextRenderer.cpp  TextRenderer.h  UI.cpp  UI.h  user-interface.pri
